<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_reports" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/menu_analytics" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_account" />

            <item
                android:id="@+id/nav_admin_requests"
                android:icon="@drawable/ic_admin"
                android:title="Admin Requests"
                android:visible="false" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu> 